--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -114,26 +114,29 @@
     @extend %clearfix;
 }
 
-.footer-col {
+.footer-col-0 {
+    display: none;
     float: left;
     margin-bottom: $spacing-unit / 2;
     padding-left: $spacing-unit / 2;
 }
 
 .footer-col-1 {
-    width: -webkit-calc(35% - (#{$spacing-unit} / 2));
-    width:         calc(35% - (#{$spacing-unit} / 2));
+    float: left;
+    width: -webkit-calc(40%);
+    width:         calc(40%);
 }
 
 .footer-col-2 {
-    width: -webkit-calc(20% - (#{$spacing-unit} / 2));
-    width:         calc(20% - (#{$spacing-unit} / 2));
+    float: left;
+    width: -webkit-calc(60%);
+    width:         calc(60%);
 }
 
-.footer-col-3 {
-    width: -webkit-calc(45% - (#{$spacing-unit} / 2));
-    width:         calc(45% - (#{$spacing-unit} / 2));
-}
+// .footer-col-3 {
+//     width: -webkit-calc(40% - (#{$spacing-unit} / 2));
+//     width:         calc(40% - (#{$spacing-unit} / 2));
+// }
 
 @include media-query($on-laptop) {
     .footer-col-1,
