home layout only Facebook

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,9 +20,9 @@
 	<div class="page-content">
 		<div class="wrapper">
 
-		<div style="float: right;" class="fb-like-box" data-href="https://www.facebook.com/PHCCSpringHillSGA" data-width="300" data-colorscheme="light" data-show-faces="true" data-header="false" data-stream="true" data-show-border="true"></div>
-
-			{{ content }}
+			<center>
+			<div style="margin: 0 auto;" class="fb-like-box" data-href="https://www.facebook.com/PHCCSpringHillSGA" data-width="400" data-colorscheme="light" data-show-faces="true" data-header="false" data-stream="true" data-show-border="true"></div>
+			</center>
 
 		</div>
 	</div>
