--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,17 +14,17 @@
 		fjs.parentNode.insertBefore(js, fjs);
 	}(document, 'script', 'facebook-jssdk'));</script>
 
-
 	{% include header.html %}
 
-	<div class="page-content">
-		<div class="wrapper">
+	<div class="container">
 
-			<center>
-			<div style="margin: 0 auto;" class="fb-like-box" data-href="https://www.facebook.com/PHCCSpringHillSGA" data-width="400" data-colorscheme="light" data-show-faces="true" data-header="false" data-stream="true" data-show-border="true"></div>
-			</center>
-
+		<div class="row">
+			<div class="col-sm-8"></div>
+			<div class="col-sm-4">
+				<div style="margin: 0 auto;" class="fb-like-box" data-href="https://www.facebook.com/PHCCSpringHillSGA" data-width="400" data-height="400" data-colorscheme="light" data-show-faces="true" data-header="false" data-stream="true" data-show-border="true"></div>
+			</div>
 		</div>
+
 	</div>
 
 	{% include footer.html %}
