--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,8 +6,6 @@
 			
 			<div class="col-sm-4 col-sm-push-8">
 				<ul class="list-inline text-center">
-					<li><a href="">Terms</a></li>
-					<li><a href="">Privacy</a></li>
 					<li><a href="">Contact</a></li>
 				</ul>
 			</div>
@@ -23,7 +21,7 @@
 				</ul>
 			</div>
 			<div class="col-sm-4 col-sm-pull-8 text-center small">
-				&copy; Copyright 2014 {{site.title}}
+				&copy; Copyright {{ 'now' | date: "%Y" }} {{site.brand}}
 			</div>
 
 		</div>
