--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -1,1 +1,9 @@
 // body { background-color: #eee; }
+
+#page-footer {
+	background-color: #617487;
+	color: #fff;
+
+	margin-top: 20px;
+	padding: 30px 0;
+}
